--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "pinia": "^2.0.21",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
@@ -21,8 +23,11 @@
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.12",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vitest": "^0.23.0",
